Random experiments for perf