@@ -32,6 +32,9 @@ import sun.invoke.util.Wrapper;
 import java.lang.classfile.*;
 import java.lang.classfile.attribute.RuntimeVisibleAnnotationsAttribute;
 import java.lang.classfile.attribute.SourceFileAttribute;
+import java.lang.classfile.constantpool.ClassEntry;
+import java.lang.classfile.constantpool.ConstantPoolBuilder;
+import java.lang.classfile.constantpool.FieldRefEntry;
 import java.lang.classfile.instruction.SwitchCase;
 import java.lang.constant.ClassDesc;
 import java.lang.constant.ConstantDesc;
@@ -84,17 +87,10 @@ class InvokerBytecodeGenerator {
     private static final String SOURCE_PREFIX = "LambdaForm$";
 
     // Static builders to avoid lambdas
-    private static final Consumer<FieldBuilder> STATIC_FINAL_FIELD = new Consumer<FieldBuilder>() {
+    private static final Consumer<FieldBuilder> STATIC_FINAL_FIELD = new Consumer<>() {
         @Override
         public void accept(FieldBuilder fb) {
             fb.withFlags(ACC_STATIC | ACC_FINAL);
-        }
-    };
-
-    record MethodBody(Consumer<CodeBuilder> code) implements Consumer<MethodBuilder> {
-        @Override
-        public void accept(MethodBuilder mb) {
-            mb.withCode(code);
         }
     };
 
@@ -104,11 +100,14 @@ class InvokerBytecodeGenerator {
     /** Name of new class */
     private final String name;
     private final String className;
-    private final ClassDesc classDesc;
+    private final ClassEntry thisClass;
 
     private final LambdaForm lambdaForm;
     private final String     invokerName;
     private final MethodType invokerType;
+
+    // Lookup cost reduction
+    private final ConstantPoolBuilder pool;
 
     /** Info about local variables in compiled lambda form */
     private int[]       localsMap;    // index
@@ -139,9 +138,10 @@ class InvokerBytecodeGenerator {
         if (dumper().isEnabled()) {
             name = makeDumpableClassName(name);
         }
+        this.pool = ConstantPoolBuilder.of();
         this.name = name;
         this.className = CLASS_PREFIX + name;
-        this.classDesc = ClassDesc.ofInternalName(className);
+        this.thisClass = pool.classEntry(pool.utf8Entry(className));
         this.lambdaForm = lambdaForm;
         this.invokerName = invokerName;
         this.invokerType = invokerType;
@@ -202,35 +202,13 @@ class InvokerBytecodeGenerator {
         return className;
     }
 
-    static class ClassData {
-        final String name;
-        final ClassDesc desc;
-        final Object value;
-
-        ClassData(String name, ClassDesc desc, Object value) {
-            this.name = name;
-            this.desc = desc;
-            this.value = value;
-        }
-
-        public String name() { return name; }
+    record ClassData(FieldRefEntry field, ClassDesc desc, Object value) {
         public String toString() {
-            return name + ",value="+value;
+            return field().nameAndType() + ",value=" + value;
         }
     }
 
-    String classData(Object arg) {
-        ClassDesc desc;
-        if (arg instanceof Class) {
-            desc = CD_Class;
-        } else if (arg instanceof MethodHandle) {
-            desc = CD_MethodHandle;
-        } else if (arg instanceof LambdaForm) {
-            desc = CD_LambdaForm;
-        } else {
-            desc = CD_Object;
-        }
-
+    FieldRefEntry classData(Object arg, ClassDesc desc) {
         // unique static variable name
         String name;
         if (dumper().isEnabled()) {
@@ -242,9 +220,11 @@ class InvokerBytecodeGenerator {
         } else {
             name = "_D_" + classData.size();
         }
-        ClassData cd = new ClassData(name, desc, arg);
+        var nt = pool.nameAndTypeEntry(name, desc);
+        var field = pool.fieldRefEntry(thisClass, nt);
+        ClassData cd = new ClassData(field, desc, arg);
         classData.add(cd);
-        return name;
+        return field;
     }
 
     /**
@@ -273,7 +253,7 @@ class InvokerBytecodeGenerator {
      */
     private byte[] classFileSetup(Consumer<? super ClassBuilder> config) {
         try {
-            return ClassFile.of().build(classDesc, new Consumer<>() {
+            return ClassFile.of().build(thisClass, pool, new Consumer<>() {
                 @Override
                 public void accept(ClassBuilder clb) {
                     clb.withFlags(ACC_FINAL | ACC_SUPER)
@@ -322,41 +302,42 @@ class InvokerBytecodeGenerator {
      * <clinit> to initialize the static final fields with the live class data
      * LambdaForms can't use condy due to bootstrapping issue.
      */
-    static void clinit(ClassBuilder clb, ClassDesc classDesc, List<ClassData> classData) {
+    void clinit(ClassBuilder clb) {
         if (classData.isEmpty())
             return;
 
         for (ClassData p : classData) {
             // add the static field
-            clb.withField(p.name, p.desc, STATIC_FINAL_FIELD);
+            var field = p.field();
+            clb.withField(field.name(), field.type(), STATIC_FINAL_FIELD);
         }
 
-        clb.withMethod(CLASS_INIT_NAME, MTD_void, ACC_STATIC, new MethodBody(new Consumer<CodeBuilder>() {
+        clb.withMethodBody(CLASS_INIT_NAME, MTD_void, ACC_STATIC, new Consumer<>() {
             @Override
             public void accept(CodeBuilder cob) {
-                cob.loadConstant(classDesc)
+                cob.ldc(thisClass)
                    .invokestatic(CD_MethodHandles, "classData", MTD_Object_Class);
                 if (classData.size() == 1) {
-                    ClassData p = classData.get(0);
+                    ClassData p = classData.getFirst();
                     cob.checkcast(p.desc)
-                       .putstatic(classDesc, p.name, p.desc);
+                       .putstatic(p.field);
                 } else {
                     cob.checkcast(CD_List)
                        .astore(0);
                     int index = 0;
-                    var listGet = cob.constantPool().interfaceMethodRefEntry(CD_List, "get", MTD_Object_int);
+                    var listGet = pool.interfaceMethodRefEntry(CD_List, "get", MTD_Object_int);
                     for (ClassData p : classData) {
                         // initialize the static field
                         cob.aload(0)
                            .loadConstant(index++)
                            .invokeinterface(listGet)
                            .checkcast(p.desc)
-                           .putstatic(classDesc, p.name, p.desc);
+                           .putstatic(p.field);
                     }
                 }
                 cob.return_();
             }
-        }));
+        });
     }
 
     private void emitLoadInsn(CodeBuilder cob, TypeKind type, int index) {
@@ -369,8 +350,6 @@ class InvokerBytecodeGenerator {
 
     /**
      * Emit a boxing call.
-     *
-     * @param wrapper primitive type class to box.
      */
     private void emitBoxing(CodeBuilder cob, TypeKind tk) {
         TypeConvertingMethodAdapter.box(cob, tk);
@@ -378,8 +357,6 @@ class InvokerBytecodeGenerator {
 
     /**
      * Emit an unboxing call (plus preceding checkcast).
-     *
-     * @param wrapper wrapper type class to unbox.
      */
     private void emitUnboxing(CodeBuilder cob, TypeKind target) {
         switch (target) {
@@ -448,7 +425,7 @@ class InvokerBytecodeGenerator {
             ClassDesc sig = classDesc(cls);
             cob.checkcast(sig);
         } else {
-            cob.getstatic(classDesc, classData(cls), CD_Class)
+            cob.getstatic(classData(cls, CD_Class))
                .swap()
                .invokevirtual(CD_Class, "cast", MTD_Object_Object);
             if (Object[].class.isAssignableFrom(cls))
@@ -556,7 +533,7 @@ class InvokerBytecodeGenerator {
             @Override
             public void accept(ClassBuilder clb) {
                 addMethod(clb);
-                clinit(clb, classDesc, classData);
+                clinit(clb);
                 bogusMethod(clb, lambdaForm);
             }
         });
@@ -584,7 +561,7 @@ class InvokerBytecodeGenerator {
                 }
                 mb.accept(RuntimeVisibleAnnotationsAttribute.of(annotations));
 
-                classData(lambdaForm); // keep LambdaForm instance & its compiled form lifetime tightly coupled.
+                classData(lambdaForm, CD_LambdaForm); // keep LambdaForm instance & its compiled form lifetime tightly coupled.
 
                 mb.withCode(new Consumer<CodeBuilder>() {
                     @Override
@@ -594,8 +571,7 @@ class InvokerBytecodeGenerator {
                             // receiver MethodHandle (at slot #0) with an embedded constant and use it instead.
                             // It enables more efficient code generation in some situations, since embedded constants
                             // are compile-time constants for JIT compiler.
-                            cob.getstatic(classDesc, classData(lambdaForm.customized), CD_MethodHandle)
-                               .checkcast(CD_MethodHandle);
+                            cob.getstatic(classData(lambdaForm.customized, CD_MethodHandle));
                             assert(checkActualReceiver(cob)); // expects MethodHandle on top of the stack
                             cob.astore(0);
                         }
@@ -728,7 +704,7 @@ class InvokerBytecodeGenerator {
             // push receiver
             MethodHandle target = name.function.resolvedHandle();
             assert(target != null) : name.exprString();
-            cob.getstatic(classDesc, classData(target), CD_MethodHandle);
+            cob.getstatic(classData(target, CD_MethodHandle));
             emitReferenceCast(cob, MethodHandle.class, target);
         } else {
             // load receiver
@@ -1453,7 +1429,7 @@ class InvokerBytecodeGenerator {
             if (Wrapper.isWrapperType(arg.getClass()) && bptype != L_TYPE) {
                 cob.loadConstant((ConstantDesc)arg);
             } else {
-                cob.getstatic(classDesc, classData(arg), CD_Object);
+                cob.getstatic(classData(arg, CD_Object));
                 emitImplicitConversion(cob, L_TYPE, ptype, arg);
             }
         }
@@ -1582,7 +1558,7 @@ class InvokerBytecodeGenerator {
                         });
                     }
                 });
-                clinit(clb, classDesc, classData);
+                clinit(clb);
                 bogusMethod(clb, invokerType);
             }
         });
@@ -1601,10 +1577,10 @@ class InvokerBytecodeGenerator {
 
     private byte[] generateNamedFunctionInvokerImpl(MethodTypeForm typeForm) {
         MethodType dstType = typeForm.erasedType();
-        final byte[] classFile = classFileSetup(new Consumer<ClassBuilder>() {
+        final byte[] classFile = classFileSetup(new Consumer<>() {
             @Override
             public void accept(ClassBuilder clb) {
-                methodSetup(clb, new Consumer<MethodBuilder>() {
+                methodSetup(clb, new Consumer<>() {
                     @Override
                     public void accept(MethodBuilder mb) {
 
@@ -1613,7 +1589,7 @@ class InvokerBytecodeGenerator {
                                 FORCEINLINE // Force inlining of this invoker method.
                         )));
 
-                        mb.withCode(new Consumer<CodeBuilder>() {
+                        mb.withCode(new Consumer<>() {
                             @Override
                             public void accept(CodeBuilder cob) {
                                 // Load receiver
@@ -1658,7 +1634,7 @@ class InvokerBytecodeGenerator {
                         });
                     }
                 });
-                clinit(clb, classDesc, classData);
+                clinit(clb);
                 bogusMethod(clb, dstType);
             }
         });
@@ -1671,29 +1647,33 @@ class InvokerBytecodeGenerator {
      */
     private void bogusMethod(ClassBuilder clb, Object os) {
         if (dumper().isEnabled()) {
-            clb.withMethod("dummy", MTD_void, ACC_STATIC, new MethodBody(new Consumer<CodeBuilder>() {
+            clb.withMethodBody("dummy", MTD_void, ACC_STATIC, new Consumer<>() {
                 @Override
                 public void accept(CodeBuilder cob) {
                     cob.loadConstant(os.toString());
                     cob.pop();
                     cob.return_();
                 }
-            }));
+            });
         }
     }
 
     static ClassDesc classDesc(Class<?> cls) {
 //        assert(VerifyAccess.isTypeVisible(cls, Object.class)) : cls.getName();
         return cls.isPrimitive() ? Wrapper.forPrimitiveType(cls).basicClassDescriptor()
+             : cls == Object.class ? CD_Object
              : cls == MethodHandle.class ? CD_MethodHandle
              : cls == DirectMethodHandle.class ? CD_DirectMethodHandle
-             : cls == Object.class ? CD_Object
              : ReferenceClassDescImpl.ofValidated(cls.descriptorString());
     }
 
     static MethodTypeDesc methodDesc(MethodType mt) {
-        var params = new ClassDesc[mt.parameterCount()];
-        for (int i = 0; i < params.length; i++) {
+        var cnt = mt.parameterCount();
+        if (cnt == 0) {
+            return MethodTypeDesc.of(classDesc(mt.returnType()));
+        }
+        var params = new ClassDesc[cnt];
+        for (int i = 0; i < cnt; i++) {
             params[i] = classDesc(mt.parameterType(i));
         }
         return MethodTypeDescImpl.ofValidated(classDesc(mt.returnType()), params);
